# tutorial2_reinhard_tm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  imageutils.cpp  main.cpp  reinhard.h  run_kslicer.sh  setup.sh
images/: tief_etz_1k.exr
